# 876

./: .gitignore  .gitpod.yml  .npmrc  .prettierignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  railway.toml  render.yaml  turbo.json
apps/api/: .dev.vars.example  .env.development  .env.example  Dockerfile  README.md  main.py  package.json  pyproject.toml  railway.toml  requirements.txt  wrangler.jsonc
apps/api/api/: v1.py
apps/api/core/: config.py  deletion.py  errors.py  id.py  identifications.py  logging.py  middleware.py  modules.py  openapi.py  org_permissions.py  platform_apps.py  products.py  rate_limit.py  responses.py  security.py  session.py  timestamps.py
apps/api/db/: migrate.py  session.py
apps/api/docs/: api-architecture.md
apps/api/providers/: feature_flags.py  protocol.py
apps/api/schemas/: api_keys.py  sessions.py
apps/api/scripts/: bootstrap.py  migrate_feature_flags_to_posthog.py  migrate_org_enrollment.py  promote_admin.py  seed_internal.py  seed_raheem_contacts.py  seed_reserved_usernames.py  seed_scotiabank_branches.py  seed_test_data.py
apps/api/services/: auth.py  billing_customer_dispatch.py  billing_customer_sync.py  bootstrap.py  feature_flag_migration.py  feature_seeds.py  features.py  finance_provisioning.py  finance_provisioning_dispatch.py  onboarding_catalog.py  organization_bootstrap.py  plan_seeds.py  provisioning.py  provisioning_catalog.py  provisioning_seeds.py
apps/api/tests/: conftest.py  test_account_linking.py  test_api_envelope_middleware.py  test_api_key_security.py  test_app_provisioning.py  test_app_provisioning_seeds.py  test_billing_customer_sync.py  test_bootstrap.py  test_data_routes.py  test_errors.py  test_feature_app_scoping.py  test_feature_flag_provider.py  test_feature_repository.py  test_feature_seeds.py  test_feature_service_provider_sync.py  test_finance_provisioning.py  test_health.py  test_logging.py  test_onboarding_catalog.py  test_openapi_security.py  test_org_access.py  test_org_contacts.py  test_org_profile.py  test_plan_seeds.py  test_platform_apps.py  test_posthog_client.py  test_principal_token_use.py  test_provisioning_runs.py  test_rate_limit.py  test_request_logging.py  test_session_multi.py  test_settings.py
apps/api/utils/: email.py  security_helpers.py
apps/api/worker/: index.ts
apps/billing-api/: .dev.vars.example  .dockerignore  .env.example  Dockerfile  README.md  main.py  package.json  pyproject.toml  railway.scheduler.toml  railway.toml  requirements.txt  wrangler.jsonc
apps/billing-api/api/: __init__.py  v1.py
apps/billing-api/core/: __init__.py  config.py  errors.py  id.py  identity.py  logging.py  metrics.py  middleware.py  openapi.py  responses.py  security.py
apps/billing-api/db/: __init__.py  reconciliation.py  schema_ownership.py  session.py
apps/billing-api/domains/: __init__.py
apps/billing-api/migrations/: env.py
apps/billing-api/scripts/: check_cutover.py  check_environment.py  check_migration.py  generate_models.py  generate_routes.py  reconcile_databases.py  run_billing.py
apps/billing-api/tests/: test_billing_engine.py  test_cutover_check.py  test_document_workflow.py  test_health.py  (+12 more)
(+2485 files in other folders)
