[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "api-876"
version = "0.1.0"
description = "FastAPI backend for the 876 platform"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.30,<1",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "pydantic-settings>=2.8,<3",
  "pyjwt[crypto]>=2.10,<3",
  "sqlalchemy[asyncio]>=2.0,<3",
  "structlog>=24.0,<25",
  "sentry-sdk[fastapi,sqlalchemy]>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
  "python-multipart",
  "python-dotenv>=1.0,<2",
  "stripe>=11.0,<12",
  "beautifulsoup4>=4.12,<5",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = [
  "add_member.py",
  "delete_org.py",
  "migrate.py",
  "migrate2.py",
  "migrate_add_feature_app_id.py",
  "migrate_apps_org_reassign.py",
  "migrate_features_app_id.py",
  "new_key.py",
  "new_key_v2.py",
  "test_keys.py",
  "test_redirect.py",
  "update_efesto.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# Pre-existing issues carried over from the original src/api/ layout; address separately.
ignore = ["B904", "E712", "UP046"]

[tool.ruff.lint.per-file-ignores]
# Long prose strings in doc helpers are intentionally over 88 chars.
"**/docs.py" = ["E501"]
"core/openapi.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
files = ["."]
exclude = ["src/"]

[[tool.mypy.overrides]]
module = [
  "domains.apps.docs",
  "domains.auth.docs",
  "domains.features.docs",
  "domains.memberships.docs",
  "domains.oauth.docs",
  "domains.organizations.docs",
  "domains.products.docs",
  "domains.users.docs",
]
disable_error_code = ["type-arg"]
